# hello-nasm

./: .gitignore  CMakeLists.txt  Makefile  README.md
assembly/: hello.asm
scripts/: install-nasm.sh
